--- a/environment.yml
+++ b/environment.yml
@@ -10,6 +10,7 @@ dependencies:
   - _r-mutex=1.0.1=anacondar_1
   - aioeasywebdav=2.4.0=py36_1000
   - aiohttp=3.6.2=py36h516909a_0
+  - alsa-lib=1.1.5=h516909a_1002
   - appdirs=1.4.3=py_1
   - assemblyutility=20160209=he941832_2
   - async-timeout=3.0.1=py_1000
@@ -22,6 +23,7 @@ dependencies:
   - boto3=1.14.9=pyh9f0ad1d_0
   - botocore=1.17.9=pyh9f0ad1d_0
   - brotlipy=0.7.0=py36h8c4c3a4_1000
+  - bwa=0.7.17=hed695b0_7
   - bwidget=1.9.14=0
   - bzip2=1.0.8=h516909a_2
   - ca-certificates=2020.6.20=hecda079_0
@@ -40,8 +42,10 @@ dependencies:
   - dropbox=10.1.1=pyh9f0ad1d_0
   - expat=2.2.9=he1b5a44_2
   - fastp=0.20.1=h8b12597_0
+  - fastqc=0.11.9=0
   - filechunkio=1.6=py36_0
   - flye=2.7.1=py36h7f0b59b_1
+  - font-ttf-dejavu-sans-mono=2.37=hab24e00_0
   - fontconfig=2.13.1=h86ecdb6_1001
   - freetype=2.10.2=he06d7ca_0
   - fribidi=1.0.9=h516909a_0
@@ -51,6 +55,7 @@ dependencies:
   - gettext=0.19.8.1=hc5be6a0_1002
   - gfortran_impl_linux-64=7.5.0=hdf63c60_6
   - gfortran_linux-64=7.5.0=h09487f9_20
+  - giflib=5.2.1=h516909a_2
   - gitdb=4.0.5=py_0
   - gitpython=3.1.3=py_0
   - glib=2.65.0=h6f030ca_0
@@ -79,6 +84,7 @@ dependencies:
   - jsonschema=3.2.0=py36h9f0ad1d_1
   - k8=0.2.5=he513fc3_0
   - krb5=1.17.1=hfafb76e_1
+  - lcms2=2.11=hbd6801e_0
   - ld_impl_linux-64=2.34=h53a641e_5
   - libblas=3.8.0=16_openblas
   - libcblas=3.8.0=16_openblas
@@ -111,6 +117,7 @@ dependencies:
   - ncurses=6.1=hf484d3e_1002
   - networkx=2.4=py_1
   - numpy=1.18.5=py36h7314795_0
+  - openjdk=11.0.1=h600c080_1018
   - openssl=1.1.1g=h516909a_0
   - pandas=1.0.5=py36h830a2c2_0
   - pango=1.42.4=h7062337_4
@@ -210,6 +217,8 @@ dependencies:
   - wheel=0.34.2=py_1
   - wrapt=1.12.1=py36h8c4c3a4_1
   - xmlrunner=1.7.7=py_0
+  - xorg-fixesproto=5.0=h14c3975_1002
+  - xorg-inputproto=2.3.2=h14c3975_1002
   - xorg-kbproto=1.0.7=h14c3975_1002
   - xorg-libice=1.0.10=h516909a_0
   - xorg-libsm=1.2.3=h84519dc_1000
@@ -217,9 +226,13 @@ dependencies:
   - xorg-libxau=1.0.9=h14c3975_0
   - xorg-libxdmcp=1.1.3=h516909a_0
   - xorg-libxext=1.3.4=h516909a_0
+  - xorg-libxfixes=5.0.3=h516909a_1004
+  - xorg-libxi=1.7.10=h516909a_0
   - xorg-libxpm=3.5.13=h516909a_0
   - xorg-libxrender=0.9.10=h516909a_1002
   - xorg-libxt=1.1.5=h516909a_1003
+  - xorg-libxtst=1.2.3=h516909a_1002
+  - xorg-recordproto=1.14.2=h516909a_1002
   - xorg-renderproto=0.11.1=h14c3975_1002
   - xorg-xextproto=7.3.0=h14c3975_1002
   - xorg-xproto=7.0.31=h14c3975_1007
